# Payload-Dumper-Android

./: .gitignore  README.md  settings.gradle.kts  tools.versions.toml
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/rajmani7584/payloaddumper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rajmani7584/payloaddumper/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pl-PL/: strings.xml
app/src/main/res/xml/: locale_config.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 20260713.txt
gradle/: libs.versions.toml  tools.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/payload-dumper-android-rs/: Cargo.toml  build.rs  build.sh  part_manifest.proto  update_metadata.proto
lib/payload-dumper-android-rs/.config/: rust-toolchain.toml
lib/payload-dumper-android-rs/src/: lib.rs  main.rs
lib/payload-dumper-android-rs/src/engine/: chromeos_update_engine.rs  mod.rs  part_manifest.rs
lib/payload-dumper-android-rs/src/helper/: constants.rs
lib/payload-dumper-android-rs/src/payload/: dump.rs  header.rs  mod.rs
lib/payload-dumper-android-rs/src/reader/: local_reader.rs  macros.rs  mod.rs  remote_reader.rs  zip_reader.rs
lib/payload-dumper-android-rust/: Cargo.toml
lib/payload-dumper-android-rust/src/: chromeos_update_engine.rs  lib.rs  payload.rs
(+28 files in other folders)
