[package]
name = "payload-dumper-android-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = "0.22.4"
tokio = { version = "1.52.3", features = ["full"] }

[lib]
name = "payload_dumper"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
