[package]
name = "payload-dumper-android-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pdumper-rs"
path = "src/main.rs"

[lib]
name = "payload_dumper"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
bzip2 = "0.6.1"
hex = "0.4.3"
jni = "0.22.4"
liblzma = "0.4.6"
prost = "0.14.3"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
ureq = "3.3.0"
zstd = "0.13.3"


[build-dependencies]
prost-build = "0.14.3"

[profile.release]
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
opt-level = 3
